--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,7 +3,7 @@ runtime: php81
 build:
   commands:
     build:
-      chmod +x startup.sh
+      - chmod +x startup.sh
 run:
   command: ./startup.sh
   network:
